--- a/test-enneagramme-sans-indice.html
+++ b/test-enneagramme-sans-indice.html
@@ -13,6 +13,7 @@
       --muted:rgba(255,255,255,.68);
       --line:rgba(255,255,255,.14);
       --accent:#8bd3ff;
+
       --good:#9ff2b1;
       --warn:#ffd18b;
       --bad:#ff8b8b;
@@ -20,25 +21,27 @@
     }
     *{box-sizing:border-box}
 
+    html,body{height:100%}
+
     /* Scrollbar claire (Firefox + WebKit) */
     html{
       scrollbar-width: thin;
-      scrollbar-color: rgba(255,255,255,.62) rgba(255,255,255,.14);
+      scrollbar-color: rgba(255,255,255,.85) rgba(255,255,255,.16);
     }
     ::-webkit-scrollbar{ width: 12px; height: 12px; }
     ::-webkit-scrollbar-track{
-      background: rgba(255,255,255,.12);
+      background: rgba(255,255,255,.14);
       border-left: 1px solid rgba(255,255,255,.10);
     }
     ::-webkit-scrollbar-thumb{
-      background: rgba(255,255,255,.62);
+      background: rgba(255,255,255,.86);
       border-radius: 999px;
-      border: 3px solid rgba(7,11,20,.55);
+      border: 3px solid rgba(7,11,20,.40);
     }
-    ::-webkit-scrollbar-thumb:hover{ background: rgba(255,255,255,.78); }
+    ::-webkit-scrollbar-thumb:hover{ background: rgba(255,255,255,.95); }
     ::-webkit-scrollbar-corner{ background: rgba(0,0,0,0); }
 
-    /* Progression (plus visible) */
+    /* Progression (bleue, pas verte) */
     .scrollProg{
       position:fixed;
       left:0; top:0;
@@ -46,7 +49,7 @@
       height:6px;
       z-index:1000;
       pointer-events:none;
-      opacity:.85;
+      opacity:.88;
       background: rgba(0,0,0,.18);
       backdrop-filter: blur(6px);
     }
@@ -58,8 +61,8 @@
     .scrollProgFill{
       width:0%;
       height:100%;
-      background: linear-gradient(90deg, rgba(139,211,255,.95), rgba(159,242,177,.85));
-      box-shadow: 0 0 14px rgba(139,211,255,.18);
+      background: linear-gradient(90deg, rgba(139,211,255,.98), rgba(96,165,250,.92));
+      box-shadow: 0 0 14px rgba(139,211,255,.20);
       border-radius: 0 999px 999px 0;
       transition: width .06s linear;
     }
@@ -73,7 +76,9 @@
       color:var(--txt);
       min-height:100vh;
     }
+
     .wrap{max-width:1100px;margin:0 auto;padding:22px;padding-bottom:110px}
+
     header{
       display:flex;align-items:flex-start;justify-content:space-between;gap:16px;
       padding:18px 18px 14px;border:1px solid var(--line);
@@ -83,6 +88,7 @@
     }
     h1{margin:0;font-size:22px;letter-spacing:.2px}
     .sub{margin-top:6px;color:var(--muted);font-size:13px;line-height:1.35}
+
     .actions{display:flex;gap:10px;flex-wrap:wrap;justify-content:flex-end}
     button{
       border:1px solid var(--line);
@@ -97,6 +103,7 @@
     }
     button:hover{background: rgba(255,255,255,.10); border-color: rgba(255,255,255,.22)}
     button:active{transform: translateY(1px)}
+
     .grid{
       display:grid;
       grid-template-columns: 1.4fr .9fr;
@@ -107,6 +114,7 @@
       .grid{grid-template-columns:1fr}
       .actions{justify-content:flex-start}
     }
+
     .card{
       border:1px solid var(--line);
       background: rgba(255,255,255,.05);
@@ -128,6 +136,7 @@
     }
     .cardBody{padding:14px 16px}
     .scaleHint{color:var(--muted);font-size:12px;margin:0 0 12px;line-height:1.4}
+
     .q{
       padding:12px 12px;
       border:1px solid rgba(255,255,255,.10);
@@ -150,6 +159,7 @@
       font-size:12px;
     }
     .legend{display:flex;justify-content:space-between;color:var(--muted);font-size:11px;margin-top:6px}
+
     .resultBox{
       padding:14px 16px;
       border-top:1px solid var(--line);
@@ -177,7 +187,6 @@
     }
 
     .top3{margin-top:12px;display:grid;gap:10px}
-
     .topItem{
       border:1px solid rgba(255,255,255,.14);
       background: rgba(255,255,255,.05);
@@ -191,7 +200,6 @@
       background: rgba(255,255,255,.08);
       transform: translateX(2px);
     }
-
     .topLeft{display:flex;flex-direction:column;gap:2px}
     .topName{font-weight:900}
     .topDesc{color:var(--muted);font-size:12px;line-height:1.25}
@@ -205,8 +213,8 @@
       text-align:center;
       font-size:12px;
     }
-    .bars{margin-top:20px; display:grid; gap:8px}
 
+    .bars{margin-top:20px; display:grid; gap:8px}
     .barRow{
       display:grid;
       grid-template-columns: 120px 1fr 40px;
@@ -218,7 +226,6 @@
       transition: background .1s;
     }
     .barRow:hover{ background: rgba(255,255,255,.05); }
-
     .barK{color:var(--txt); font-size:12px; font-weight: 600; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
     .barV{color:var(--muted); font-size:12px; text-align:right;}
     .barTrack{
@@ -234,6 +241,7 @@
     .ghost{background: rgba(255,255,255,.03)}
     .danger{border-color: rgba(255,139,139,.30)}
     .ok{border-color: rgba(159,242,177,.30)}
+
     .toast{
       position: fixed; left: 50%; bottom: 18px; transform: translateX(-50%);
       background: rgba(0,0,0,.55); border:1px solid rgba(255,255,255,.18);
