--- a/test-enneagramme-sans-indice.html
+++ b/test-enneagramme-sans-indice.html
@@ -6,14 +6,13 @@
   <title>Test Ennéagramme</title>
   <style>
     :root{
-      --bg:#0b1220;
+      --bg:#070b14;
       --panel:rgba(255,255,255,.06);
       --panel2:rgba(255,255,255,.08);
       --txt:rgba(255,255,255,.92);
       --muted:rgba(255,255,255,.68);
       --line:rgba(255,255,255,.14);
       --accent:#8bd3ff;
-
       --good:#9ff2b1;
       --warn:#ffd18b;
       --bad:#ff8b8b;
@@ -21,27 +20,24 @@
     }
     *{box-sizing:border-box}
 
-    html,body{height:100%}
-
-    /* Scrollbar claire (Firefox + WebKit) */
     html{
+      background: var(--bg);
       scrollbar-width: thin;
-      scrollbar-color: rgba(255,255,255,.85) rgba(255,255,255,.16);
+      scrollbar-color: rgba(255,255,255,.72) rgba(255,255,255,.14);
     }
     ::-webkit-scrollbar{ width: 12px; height: 12px; }
     ::-webkit-scrollbar-track{
-      background: rgba(255,255,255,.14);
+      background: rgba(255,255,255,.12);
       border-left: 1px solid rgba(255,255,255,.10);
     }
     ::-webkit-scrollbar-thumb{
-      background: rgba(255,255,255,.86);
+      background: rgba(255,255,255,.72);
       border-radius: 999px;
-      border: 3px solid rgba(7,11,20,.40);
+      border: 3px solid rgba(7,11,20,.70);
     }
-    ::-webkit-scrollbar-thumb:hover{ background: rgba(255,255,255,.95); }
+    ::-webkit-scrollbar-thumb:hover{ background: rgba(255,255,255,.86); }
     ::-webkit-scrollbar-corner{ background: rgba(0,0,0,0); }
 
-    /* Progression (bleue, pas verte) */
     .scrollProg{
       position:fixed;
       left:0; top:0;
@@ -49,8 +45,8 @@
       height:6px;
       z-index:1000;
       pointer-events:none;
-      opacity:.88;
-      background: rgba(0,0,0,.18);
+      opacity:.95;
+      background: rgba(0,0,0,.22);
       backdrop-filter: blur(6px);
     }
     .scrollProgTrack{
@@ -61,8 +57,8 @@
     .scrollProgFill{
       width:0%;
       height:100%;
-      background: linear-gradient(90deg, rgba(139,211,255,.98), rgba(96,165,250,.92));
-      box-shadow: 0 0 14px rgba(139,211,255,.20);
+      background: linear-gradient(90deg, rgba(96,165,250,.98), rgba(139,211,255,.92));
+      box-shadow: 0 0 16px rgba(96,165,250,.20);
       border-radius: 0 999px 999px 0;
       transition: width .06s linear;
     }
@@ -70,9 +66,7 @@
     body{
       margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
-      background: radial-gradient(1200px 800px at 25% 15%, rgba(139,211,255,.20), transparent 55%),
-                  radial-gradient(1000px 700px at 80% 25%, rgba(159,242,177,.12), transparent 55%),
-                  linear-gradient(180deg, #081022, #070b14);
+      background: var(--bg);
       color:var(--txt);
       min-height:100vh;
     }
@@ -88,8 +82,8 @@
     }
     h1{margin:0;font-size:22px;letter-spacing:.2px}
     .sub{margin-top:6px;color:var(--muted);font-size:13px;line-height:1.35}
-
     .actions{display:flex;gap:10px;flex-wrap:wrap;justify-content:flex-end}
+
     button{
       border:1px solid var(--line);
       background: rgba(255,255,255,.06);
@@ -135,20 +129,23 @@
       background: rgba(255,255,255,.04);
     }
     .cardBody{padding:14px 16px}
+
     .scaleHint{color:var(--muted);font-size:12px;margin:0 0 12px;line-height:1.4}
 
     .q{
       padding:12px 12px;
       border:1px solid rgba(255,255,255,.10);
-      background: rgba(0,0,0,.10);
+      background: rgba(0,0,0,.12);
       border-radius:14px;
       margin-bottom:10px;
     }
     .qTop{display:flex;justify-content:space-between;gap:12px;align-items:flex-start}
     .qText{font-size:14px;line-height:1.35}
     .qMeta{color:var(--muted);font-size:12px;white-space:nowrap}
+
     .row{display:flex;gap:10px;align-items:center;margin-top:10px}
     input[type="range"]{width:100%}
+
     .val{
       min-width:42px;text-align:center;
       font-weight:800;
@@ -158,6 +155,7 @@
       padding:6px 8px;
       font-size:12px;
     }
+
     .legend{display:flex;justify-content:space-between;color:var(--muted);font-size:11px;margin-top:6px}
 
     .resultBox{
@@ -226,6 +224,7 @@
       transition: background .1s;
     }
     .barRow:hover{ background: rgba(255,255,255,.05); }
+
     .barK{color:var(--txt); font-size:12px; font-weight: 600; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
     .barV{color:var(--muted); font-size:12px; text-align:right;}
     .barTrack{
@@ -249,6 +248,7 @@
       font-size: 12px; display:none; z-index: 20; backdrop-filter: blur(8px);
       max-width: 92vw;
     }
+
     a{color:var(--accent);text-decoration:none}
 
     .siteFooter{margin-top:28px;padding:18px 12px;text-align:center;font-size:12px;opacity:.78}
@@ -262,7 +262,7 @@
       bottom: 0;
       z-index: 15;
       padding: 10px 12px calc(10px + env(safe-area-inset-bottom));
-      background: linear-gradient(180deg, rgba(7,11,20,.10), rgba(7,11,20,.78));
+      background: linear-gradient(180deg, rgba(7,11,20,.12), rgba(7,11,20,.82));
       backdrop-filter: blur(10px);
       border-top: 1px solid rgba(255,255,255,.10);
     }
@@ -350,7 +350,6 @@
           </div>
 
           <div class="top3" id="top3"></div>
-
           <div class="bars" id="bars"></div>
 
           <div class="small">
@@ -449,12 +448,9 @@
     const btnCalc2 = document.getElementById("btnCalc2");
     const btnReset2 = document.getElementById("btnReset2");
     const btnBack = document.getElementById("btnBack");
-
     const scrollProgFill = document.getElementById("scrollProgFill");
 
-    function goProfile(t){
-      location.href = PROFILE_PREFIX + t + ".html";
-    }
+    function goProfile(t){ location.href = PROFILE_PREFIX + t + ".html"; }
 
     function showToast(msg){
       toast.textContent = msg;
@@ -526,6 +522,7 @@
         q.appendChild(row);
         elQuestions.appendChild(q);
       });
+
       updateAnswered();
     }
 
@@ -571,13 +568,13 @@
       const third = arr[2];
 
       resTitle.textContent = "Vos résultats";
-      resLine.textContent = `Score max: ${first.pct}% (Type ${first.t}).`;
+      resLine.textContent = "Score max: " + first.pct + "% (Type " + first.t + ").";
 
       top3.innerHTML = "";
       [first, second, third].forEach((x) => {
         const div = document.createElement("div");
         div.className = "topItem";
-        div.style.borderLeft = `4px solid ${colorForType(x.t)}`;
+        div.style.borderLeft = "4px solid " + colorForType(x.t);
         div.title = "Cliquer pour ouvrir le Type " + x.t;
         div.onclick = () => goProfile(x.t);
 
