--- a/profils/type9.html
+++ b/profils/type9.html
@@ -646,16 +646,18 @@ Vers le Type 3. Le 9 apprend à se valoriser, devient plus productif, énergique
           <div class="content">
             <div class="block rich">
               <pre class="raw">6. Évolution et Développement
-Points d'amélioration à travailler
+Points d'amélioration à travailler :
 * Apprendre à dire « Non » et à exprimer ses propres désirs.
 * Reconnaître et exprimer sa colère au lieu de la nier.
 * Se fixer des priorités claires et s'y tenir.
 * Prendre le risque de créer un conflit pour résoudre un problème réel.
 
-Pratiques suggérées et Attitudes de Guérison
-Pratiquer la pleine conscience du corps pour repérer l'engourdissement. Se forcer à agir. Se dire : « Ma présence compte. Mes opinions sont importantes. Je n'ai pas besoin de disparaître pour être aimé ».
+Pratiques suggérées et Attitudes de Guérison :
+Pratiquer la pleine conscience du corps pour repérer l'engourdissement.
+Se forcer à agir.
+Se dire : « Ma présence compte. Mes opinions sont importantes. Je n'ai pas besoin de disparaître pour être aimé ».
 
-Intégration (Idée supérieure et Vertu)
+Intégration (Idée supérieure et Vertu) :
 En se libérant de sa compulsion, le Type 9 s'intègre vers le Type 3 (ou le Type 6).
 * Essence : L'état de présence dynamique et d'amour englobant.
 * Idée supérieure : L'Amour Sacré. Il perçoit que l'unité ne vient pas de la fusion ou de l'effacement, mais de la reconnaissance que tout est relié par l'amour.
@@ -673,19 +675,19 @@ En se libérant de sa compulsion, le Type 9 s'intègre vers le Type 3 (ou le Typ
           <div class="content">
             <div class="block rich">
               <pre class="raw">7. Approche des Idées Sacrées (Perspective Almaas)
-L'Idée sacrée
+L'Idée sacrée :
 L'Amour Sacré. C'est la perception que l'univers est une substance bienveillante et aimante qui nous inclut naturellement, sans que nous ayons besoin de nous adapter ou de disparaître pour en faire partie.
 
-L'Illusion Spécifique
+L'Illusion Spécifique :
 L'Insignifiance. La conviction profonde que "je ne compte pas", que ma présence ne fait aucune différence et que je suis séparé de l'amour.
 
-La Difficulté Spécifique
+La Difficulté Spécifique :
 La Fragmentation. Le sentiment d'être morcelé, dispersé, de ne pas avoir de centre ou de direction unifiée.
 
-La Réaction Spécifique
+La Réaction Spécifique :
 L'Engourdissement / La Narcotisation. Une tentative de ne pas ressentir la douleur de la fragmentation et de l'insignifiance en s'anesthésiant.
 
-Le Noyau de la Fixation
+Le Noyau de la Fixation :
 La constellation entre le sentiment d'insignifiance (difficulté) et la réaction d'engourdissement (réaction).</pre>
               <div class="rt"></div>
             </div>
