--- a/profils/type9.html
+++ b/profils/type9.html
@@ -22,7 +22,7 @@
       margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, Noto Sans, sans-serif;
       background:
-        radial-gradient(900px 450px at 16% 10%, rgba(52,211,153,.16), transparent 55%), /* Vert apaisant */
+        radial-gradient(900px 450px at 16% 10%, rgba(52,211,153,.16), transparent 55%),
         radial-gradient(900px 450px at 84% 10%, rgba(96,165,250,.14), transparent 55%),
         radial-gradient(1100px 600px at 50% 115%, rgba(56,189,248,.10), transparent 60%),
         var(--bg);
@@ -30,7 +30,6 @@
       line-height:1.45;
     }
 
-    /* --- DEBUT MODIFICATIONS DU MENU (CALQUÉ SUR TYPE 1) --- */
     .type-nav {
       background: rgba(15, 23, 42, 0.95);
       border-bottom: 1px solid rgba(255,255,255,0.1);
@@ -44,7 +43,7 @@
       display: flex; justify-content: space-between; align-items: center;
       gap: 12px;
     }
-    
+
     .nav-pill {
       display: inline-flex;
       align-items: center;
@@ -93,13 +92,12 @@
       font-size: 13px; background: rgba(255,255,255,0.03);
     }
     .t-link:hover { border-color: var(--blue); color: #fff; background: rgba(96,165,250,0.1); }
-    .t-link.active { 
+    .t-link.active {
       background: rgba(96,165,250,.95);
       color: #061022;
       border-color: rgba(96,165,250,.95);
       box-shadow: 0 0 12px rgba(96,165,250,0.35);
     }
-    /* --- FIN MODIFICATIONS DU MENU --- */
 
     .wrap{max-width:1100px;margin:0 auto;padding:0 16px 92px}
 
@@ -140,7 +138,9 @@
       color:rgba(255,255,255,.92);
       white-space:nowrap;
     }
-    .dot{width:9px;height:9px;border-radius:50%}
+
+    .dot:not(ul){width:9px;height:9px;border-radius:50%}
+    .rt ul.dot{width:auto;height:auto}
 
     .side{
       flex:0 1 360px;
@@ -210,7 +210,7 @@
       gap:12px;
       user-select:none;
       -webkit-tap-highlight-color: transparent;
-      background:linear-gradient(90deg, rgba(52,211,153,.14), rgba(255,255,255,0)); /* Vert */
+      background:linear-gradient(90deg, rgba(52,211,153,.14), rgba(255,255,255,0));
     }
     summary::-webkit-details-marker{display:none}
 
@@ -1114,14 +1114,6 @@ Analogie : Le Type 9 est comme une eau calme : le Neuf Survie est une mare confo
 
     function looksLikeDuplicateSectionTitle(line){
       return /^\s*(GPT\s*\d+|Type\s*\d+)\b/i.test(line.trim()) || /^\s*\d+\.\s+/.test(line.trim());
-    }
-
-    function isPlainHeading(line){
-      const t = line.trim();
-      if(!t) return false;
-      if(looksLikeDuplicateSectionTitle(t)) return true;
-      if(/^LE\s+type\s+et\s+sous\s+types/i.test(t)) return false;
-      return false;
     }
 
     function isSubhead(line){
