--- a/profils/type3.html
+++ b/profils/type3.html
@@ -140,7 +140,7 @@
       color:rgba(255,255,255,.92);
       white-space:nowrap;
     }
-    .dot{width:9px;height:9px;border-radius:50%}
+    span.dot{width:9px;height:9px;border-radius:50%}
 
     .side{
       flex:0 1 360px;
