--- a/test-enneagramme-sans-indice.html
+++ b/test-enneagramme-sans-indice.html
@@ -346,7 +346,7 @@
           <div class="resLine" id="resLine"></div>
 
           <div class="clickHint" id="clickHint">
-            <span class="verb">Cliquez</span> sur un type pour ouvrir le profil détaillé
+            <span class="verb">Cliquez👇</span> sur un type pour ouvrir le profil détaillé
           </div>
 
           <div class="top3" id="top3"></div>
