--- a/profils/type1.html
+++ b/profils/type1.html
@@ -653,7 +653,7 @@ Vertu : La Patience, acceptant le rythme des choses et l'imperfection du monde a
 
         <details data-search>
           <summary>
-            <div class="sumTitle"><b>Approche des idées sacrées (Perspective Almaas)</b></div>
+            <div class="sumTitle"><b>Approche des idées sacrées (Perspective spirituelle)</b></div>
             <span class="chev"></span>
           </summary>
           <div class="content">
