--- a/profils/type4.html
+++ b/profils/type4.html
@@ -647,7 +647,7 @@ En se libérant de sa compulsion, le Type 4 s'intègre vers le Type 1 (ou le Typ
 
         <details data-search>
           <summary>
-            <div class="sumTitle"><b>Approche des idées sacrées (Perspective Almaas)</b></div>
+            <div class="sumTitle"><b>Approche des idées sacrées (Perspective spirituelle)</b></div>
             <span class="chev"></span>
           </summary>
           <div class="content">
