--- a/profils/type5.html
+++ b/profils/type5.html
@@ -648,7 +648,7 @@ Le Type 5, souvent nommé l'« Observateur », le « Penseur » ou l'« Investig
 
         <details data-search>
           <summary>
-            <div class="sumTitle"><b>Approche des idées sacrées (Perspective Almaas)</b></div>
+            <div class="sumTitle"><b>Approche des idées sacrées (Perspective spirituelle)</b></div>
             <span class="chev"></span>
           </summary>
           <div class="content">
