--- a/profils/type7.html
+++ b/profils/type7.html
@@ -665,7 +665,7 @@ En se libérant de sa compulsion, le 7 s'intègre vers le Type 5 (ou le Type 1).
 
         <details data-search>
           <summary>
-            <div class="sumTitle"><b>Approche des idées sacrées (Almaas)</b></div>
+            <div class="sumTitle"><b>Approche des idées sacrées (perspective spirituelle)</b></div>
             <span class="chev"></span>
           </summary>
           <div class="content">
