--- a/profils/type8.html
+++ b/profils/type8.html
@@ -667,7 +667,7 @@ En se libérant de sa compulsion, le Type 8 s'intègre vers le Type 2 (ou le Typ
 
         <details data-search>
           <summary>
-            <div class="sumTitle"><b>Approche des idées sacrées (Almaas)</b></div>
+            <div class="sumTitle"><b>Approche des idées sacrées (perspective spirituelle)</b></div>
             <span class="chev"></span>
           </summary>
           <div class="content">
