--- a/profils/type9.html
+++ b/profils/type9.html
@@ -670,7 +670,7 @@ En se libérant de sa compulsion, le Type 9 s'intègre vers le Type 3 (ou le Typ
 
         <details data-search>
           <summary>
-            <div class="sumTitle"><b>Approche des idées sacrées (Almaas)</b></div>
+            <div class="sumTitle"><b>Approche des idées sacrées (perspective spirituelle)</b></div>
             <span class="chev"></span>
           </summary>
           <div class="content">
