--- a/type.html
+++ b/type.html
@@ -6,6 +6,15 @@
   <title>Fiche complète</title>
   <link rel="stylesheet" href="assets/css/app.css?v=12" />
   <link rel="stylesheet" href="assets/css/type.css?v=12" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1XYJK71TC4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1XYJK71TC4');
+</script>
 
   <style>
     .siteFooter{margin:18px 0 10px;font-size:12px;opacity:.9}
