--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="footerInner">
         <span class="copy">Brahms – Tous droits réservés</span>
         <a class="contact" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf4OaIEl11fnKasayyVrll7DZL5A3uZZBCwLdkQ/viewform?usp=header" target="_blank" rel="noopener">
-          ✉️ Écrire à Brahms
+          ✉️ Contact
         </a>
       </div>
     </footer>
