--- a/explore.html
+++ b/explore.html
@@ -86,7 +86,7 @@
 
     <footer class="siteFooter">
       <div class="footerInner">
-        <span class="copy">Brahms – Tous droits réservés</span>
+        <span class="copy">Tous droits réservés</span>
         <a class="contact" href="https://docs.google.com/forms/d/e/1FAIpQLScLBwWZA-VZf4OaIEl11fnKasayyVrll7DZL5A3uZZBCwLdkQ/viewform?usp=header" target="_blank" rel="noopener">
           ✉️ Contact
         </a>
