--- a/profils/type9.html
+++ b/profils/type9.html
@@ -970,6 +970,7 @@ Apprendre à s'affirmer, à exprimer sa colère comme une force vitale, à défi
       <div class="barBtns">
         <a class="btn primary" id="backToTest" href="../test-enneagramme-sans-indice.html">Retour au test</a>
         <a class="btn" id="backToHome" href="../index.html">Retour accueil</a>
+        <a href="type1.html" class="btn" id="nextBtn">Suivant (Retour Type 1)</a>
       </div>
       <div class="barInfo" id="barInfo">Type 9</div>
     </div>
