--- a/profils/type2.html
+++ b/profils/type2.html
@@ -111,7 +111,7 @@
     }
     /* --- FIN MODIFICATIONS DU MENU --- */
 
-    .wrap{max-width:1100px;margin:0 auto;padding:0 16px 92px}
+    .wrap{max-width:1100px;margin:0 auto;padding:0 16px 28px}
     
     .top{
       display:flex;
@@ -472,6 +472,7 @@
     .sheetBody{padding:14px}
     .cols{display:grid;grid-template-columns:repeat(3, minmax(0,1fr));gap:12px}
     @media (max-width: 980px){.cols{grid-template-columns:1fr}}
+    .bottomBar{display:none!important}
   </style>
 </head>
 
