--- a/profils/type9.html
+++ b/profils/type9.html
@@ -108,7 +108,7 @@
       box-shadow: 0 0 12px rgba(96,165,250,0.35);
     }
 
-    .wrap{max-width:1100px;margin:0 auto;padding:0 16px 92px}
+    .wrap{max-width:1100px;margin:0 auto;padding:0 16px 28px}
 
     .top{
       display:flex;
@@ -472,6 +472,7 @@
     .sheetBody{padding:14px}
     .cols{display:grid;grid-template-columns:repeat(3, minmax(0,1fr));gap:12px}
     @media (max-width: 980px){.cols{grid-template-columns:1fr}}
+    .bottomBar{display:none!important}
   </style>
 </head>
 
