--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@
   import { getFirestore } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
   import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-  const firebaseConfig = {
-  apiKey: "AIzaSyAd_3Qa9aallKo9o4qZQQf3XVdRs3JMEGUQ",
+const firebaseConfig = {
+  apiKey: "AIzaSyAd_3Qa9allKo9o4qZQQf3XVdRs3JMEGUQ",
   authDomain: "enneagramme-chat.firebaseapp.com",
   projectId: "enneagramme-chat",
   storageBucket: "enneagramme-chat.firebasestorage.app",
   messagingSenderId: "703457736548",
   appId: "1:703457736548:web:f91f0a1f36fd1a441e6c71",
-  measurementId: "G-6WBY73E5CK"
+  measurementId: "G-6WB7Y3E5CK"
 };
 
   const app = initializeApp(firebaseConfig);
