--- a/chat-prive.html
+++ b/chat-prive.html
@@ -163,9 +163,9 @@
       border-radius: 14px;
       font-size: 13px;
       line-height: 1.4;
-      word-wrap: break-word;
-      word-break: break-word;
       display: inline-block;
+      white-space: normal;
+      word-break: normal;
     }
 
     .msg-user {
