--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </div>
       <div class="actions">
         <button id="btnReset" type="button">Réinitialiser</button>
-        <button id="chatOpenBtn" type="button" class="btn">Chat privé</button>
+        <button id="chatOpenBtn" type="button" class="btn">Poser une question</button>
       </div>
     </header>
 
