--- a/test-enneagramme-sans-indice.html
+++ b/test-enneagramme-sans-indice.html
@@ -303,6 +303,134 @@
     .bottomInner .linkBtn:active{transform: translateY(1px)}
     .bottomInner .mutedBtn{opacity:.92}
   </style>
+
+  <style>
+    /* ===== Bouton discret "Poser une question" + modal chat privé ===== */
+    .chatFab{
+      position:fixed;
+      right:14px;
+      bottom:14px;
+      z-index:2200;
+    }
+    .chatFab .btnChat{
+      cursor:pointer;
+      border:1px solid rgba(96,165,250,.95);
+      background:rgba(96,165,250,.14);
+      color:rgba(255,255,255,.95);
+      padding:10px 12px;
+      border-radius:999px;
+      font-weight:700;
+      letter-spacing:.2px;
+      box-shadow: 0 10px 30px rgba(0,0,0,.45), 0 0 0 3px rgba(96,165,250,.10);
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      transition: transform .08s ease, background .12s ease, border-color .12s ease, box-shadow .12s ease;
+      white-space:nowrap;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .chatFab .btnChat:hover{
+      background:rgba(96,165,250,.22);
+      border-color:rgba(147,197,253,1);
+      transform:translateY(-1px);
+      box-shadow: 0 14px 38px rgba(0,0,0,.52), 0 0 0 3px rgba(96,165,250,.16);
+    }
+    .chatFab .btnChat:active{transform:translateY(0)}
+
+    .chatOverlay{
+      position:fixed;
+      inset:0;
+      background:rgba(0,0,0,.55);
+      backdrop-filter: blur(8px);
+      display:none;
+      align-items:center;
+      justify-content:center;
+      padding:14px;
+      z-index:3000;
+    }
+    .chatOverlay.open{display:flex}
+
+    .chatModal{
+      width:min(920px, 100%);
+      height:min(88vh, 900px);
+      background:rgba(10,14,28,.92);
+      border:1px solid rgba(255,255,255,.12);
+      border-radius:18px;
+      box-shadow: 0 24px 80px rgba(0,0,0,.65);
+      overflow:hidden;
+      display:flex;
+      flex-direction:column;
+    }
+
+    .chatModalHeader{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:10px;
+      padding:10px 12px;
+      border-bottom:1px solid rgba(255,255,255,.10);
+      background:rgba(8,12,24,.75);
+    }
+
+    .chatModalHeader .title{
+      font-weight:700;
+      letter-spacing:.2px;
+      font-size:13px;
+      display:flex;
+      align-items:center;
+      gap:10px;
+      min-width:0;
+      color:rgba(255,255,255,.9);
+    }
+
+    .chatModalHeader .title .hint{
+      opacity:.7;
+      font-weight:500;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+
+    .chatModalHeader .actions{
+      display:flex;
+      gap:8px;
+      flex-wrap:wrap;
+      justify-content:flex-end;
+    }
+
+    .chatModalHeader .btnClose{
+      cursor:pointer;
+      border:1px solid rgba(255,255,255,.14);
+      background:rgba(255,255,255,.06);
+      color:rgba(255,255,255,.94);
+      padding:10px 12px;
+      border-radius:14px;
+      font-weight:700;
+      letter-spacing:.15px;
+      transition:transform .08s ease, background .12s ease, border-color .12s ease;
+    }
+    .chatModalHeader .btnClose:hover{
+      background:rgba(255,255,255,.10);
+      border-color:rgba(255,255,255,.22);
+      transform:translateY(-1px);
+    }
+    .chatModalHeader .btnClose:active{transform:translateY(0)}
+
+    .chatFrame{
+      border:0;
+      width:100%;
+      height:100%;
+      flex:1;
+      background:#000;
+    }
+
+    @media (max-width: 900px){
+      .chatModal{height:92vh}
+      .chatFab{right:12px; bottom:12px}
+      .chatFab .btnChat{padding:9px 11px}
+    }
+  </style>
+
 </head>
 <body>
   <div class="scrollProg" id="scrollProg" aria-hidden="true">
@@ -730,5 +858,65 @@
     updateScrollProgress();
   })();
   </script>
+
+  <!-- Bouton flottant -->
+  <div class="chatFab" aria-hidden="false">
+    <button class="btnChat" id="chatOpenBtn" type="button">Poser une question</button>
+  </div>
+
+  <!-- Fenêtre chat privé (modal) -->
+  <div class="chatOverlay" id="chatOverlay" aria-hidden="true">
+    <div class="chatModal" role="dialog" aria-modal="true" aria-label="Chat privé">
+      <div class="chatModalHeader">
+        <div class="title">
+          <span>Chat privé</span>
+          <span class="hint">Fermer pour revenir au test</span>
+        </div>
+        <div class="actions">
+          <button class="btnClose" id="chatCloseBtn" type="button">Fermer</button>
+        </div>
+      </div>
+      <iframe class="chatFrame" id="chatFrame" src="chat-prive.html" title="Chat privé"></iframe>
+    </div>
+  </div>
+
+
+  <script>
+    (function(){
+      const chatOverlay = document.getElementById("chatOverlay");
+      const chatOpenBtn = document.getElementById("chatOpenBtn");
+      const chatCloseBtn = document.getElementById("chatCloseBtn");
+
+      function openChat(){
+        if(!chatOverlay) return;
+        chatOverlay.classList.add("open");
+        chatOverlay.setAttribute("aria-hidden","false");
+        document.body.style.overflow = "hidden";
+        chatCloseBtn && chatCloseBtn.focus();
+      }
+
+      function closeChat(){
+        if(!chatOverlay) return;
+        chatOverlay.classList.remove("open");
+        chatOverlay.setAttribute("aria-hidden","true");
+        document.body.style.overflow = "";
+        chatOpenBtn && chatOpenBtn.focus();
+      }
+
+      chatOpenBtn && chatOpenBtn.addEventListener("click", openChat);
+      chatCloseBtn && chatCloseBtn.addEventListener("click", closeChat);
+
+      chatOverlay && chatOverlay.addEventListener("click", (e)=>{
+        if(e.target === chatOverlay) closeChat();
+      });
+
+      document.addEventListener("keydown", (e)=>{
+        if(e.key === "Escape" && chatOverlay && chatOverlay.classList.contains("open")){
+          closeChat();
+        }
+      });
+    })();
+  </script>
+
 </body>
 </html>
