--- a/test-enneagramme-sans-indice.html
+++ b/test-enneagramme-sans-indice.html
@@ -861,7 +861,7 @@
 
   <!-- Bouton flottant -->
   <div class="chatFab" aria-hidden="false">
-    <button class="btnChat" id="chatOpenBtn" type="button">Poser une question</button>
+    <button class="btnChat" id="chatOpenBtn" type="button">❓</button>
   </div>
 
   <!-- Fenêtre chat privé (modal) -->
